--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -1,5 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:900,700,400,400italic,300,100);
-@import url(http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic);
+/* @import url(http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic); */
 /* @import url(http://fonts.googleapis.com/css?family=Roboto:900,300,100);
 @import url(http://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic);
 @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic);
@@ -14,7 +14,7 @@ html{
 }
 body{
     margin:0;
-    font:16px/1 'Merriweather', serif;
+    font:16px/1 'Lato', serif;
     -moz-osx-font-smoothing:grayscale;
     -webkit-font-smoothing:antialiased;
     text-rendering:optimizeLegibility;
@@ -54,7 +54,7 @@ button{
     padding:0;
     border:0;
 }
-::focus{
+:focus{
     outline:0;
 }
 ::selection{
@@ -71,7 +71,8 @@ html{
 *,*:before,*:after{
     box-sizing:border-box;
 }
-@media (min-width: 0rem) and (max-width: 40rem){
+
+/* @media (min-width: 0rem) and (max-width: 40rem){
     html{
         font-size:1.5rem;
     }
@@ -94,30 +95,4 @@ html{
 .row{
     max-width:1140px;
     margin:0 auto;
-}
-body h1{
-    font-family:"Lato", sans-serif;
-    font-size:2px;
-    font-size:2rem;
-    font-weight:800;
-    line-height:1;
-    line-height:1;
-    color:#333;
-    line-height:1.1;
-}
-.cta-btn{
-    display:inline-block;
-    border:0px solid #fff;
-    border-radius:0.1875em;
-    padding:15px 30px;
-    background:#dd223f;
-    font-size:1rem;
-    text-decoration:none;
-    color:#fff;
-    margin-bottom: 10px;
-}
-.cta-btn:hover{
-    cursor: pointer;
-    background-color:rgba(255,255,0,0.7);
-    color: #333;
-}
+} */
