--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,39 @@
 body{
+    background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
     background-color: #f7f7f7;
+}
+.highlight{
+    background-color: #ff0;
+    padding: 6px;
+}
+
+/* ============= REMOVE BELOW ================= */
+
+body h1{
+    font-family:"Lato", sans-serif;
+    font-size:2px;
+    font-size:2rem;
+    font-weight:800;
+    line-height:1;
+    line-height:1;
+    color:#333;
+    line-height:1.1;
+}
+.cta-btn{
+    display:inline-block;
+    border:0px solid #fff;
+    border-radius:0.1875em;
+    padding:15px 30px;
+    background:#dd223f;
+    font-size:1rem;
+    text-decoration:none;
+    color:#fff;
+    margin-bottom: 10px;
+}
+.cta-btn:hover{
+    cursor: pointer;
+    background-color:rgba(255,255,0,0.7);
+    color: #333;
 }
 .masthead{
     height: 100vh;
@@ -11,7 +45,5 @@ body{
 .pull-up{
     margin-top: -100px;
 }
-.highlight{
-    background-color: #ff0;
-    padding: 6px;
-}
+
+/* ============= REMOVE ABOVE ================= */
