--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -1,4 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:900,700,400,400italic,300,100);
+/* @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:200,300,400,500,600,700,900'); 
+font-family: 'Source Code Pro', monospace; */
 /* @import url(http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic); */
 /* @import url(http://fonts.googleapis.com/css?family=Roboto:900,300,100);
 @import url(http://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic);
